--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Eduardo Pérez Sangabriel
-logo: /images/EPS.jpg
+#logo: /images/EPS.jpg
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
